Remove markup from homepage

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,11 @@
     <title>Leaderboard</title>
   </head>
   <body>
+    <div class="heading">
+      <h1>Leaderboard</h1>
+    </div>
     <section class="main">
-      <div class="heading">
-        <h1>Leaderboard</h1>
-      </div>
+
       <div class="leaderboard">
         <div class="show-list">
           <div class="show-list-head">
@@ -17,7 +18,7 @@
             <button>Refresh</button>
           </div>          
           <ul id="leaderboard">
-            <li class="leaderboard-item" data-score="100">
+            <!-- <li class="leaderboard-item" data-score="100">
               <span class="name">Alice</span>
               <span class="score">100</span>
             </li>
@@ -28,7 +29,7 @@
             <li class="leaderboard-item" data-score="85">
               <span class="name">Alex</span>
               <span class="score">85</span>
-            </li>
+            </li> -->
           </ul>
         </div>  
         <div class="add-item">
