--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <button>Refresh</button>
           </div>          
           <ul id="leaderboard">
-            <!-- <li class="leaderboard-item" data-score="100">
+            <li class="leaderboard-item" data-score="100">
               <span class="name">Alice</span>
               <span class="score">100</span>
             </li>
@@ -29,7 +29,7 @@
             <li class="leaderboard-item" data-score="85">
               <span class="name">Alex</span>
               <span class="score">85</span>
-            </li> -->
+            </li>
           </ul>
         </div>  
         <div class="add-item">
